[package]
name = "market_data_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
reqwest = "0.11.24"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"]}
tokio-tungstenite = { version = "*", features = ["native-tls"] }